half-width-img fix, fix spacing

--- a/assets/styles/layouts/_portfolio-project.scss
+++ b/assets/styles/layouts/_portfolio-project.scss
@@ -444,8 +444,8 @@
 			img {
 		    width: 48%;
 		    //float: left;
-		    //padding: 0 1% 2% 0;
-				margin-top: 4%;
+				margin-top: 2%;
+				padding: 0 1%;
 			}
 			img:nth-child(even) {
 				float: right;
